k8s/07-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: test
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted
  egress:
    - ports:
      - port: 443
        protocol: TCP
